Mobile overflow fix

--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ body {
     margin: 0;
     font-family: system-ui;
     text-align: center;
-    width: 100vw;
-    height: 100vh;
+    width: 100dvw;
+    height: 100dvh;
     font-size: 3rem;
 }
 
